# nachopr

./: .gitignore  Dockerfile  db.sqlite3-shm  dev.py  dump.rdb  manage.py  pyproject.toml  requirements.in  requirements.in.old  requirements.txt  requirements.txt.old  run.sh  run_crawl.sh  startup.sh  web.config
.github/workflows/: main_nachoapp.yml  main_nachopr.yml  main_nachopr.yml.old  main_nachopr2.yml  main_nachox.yml
config/: settings.py
core/: __init__.py  admin.py  celery.py  cron.py  features.py  index.py  index.py.old  models.py  polar.py  subscription_handlers.py  tasks-old.old  tasks.py  tasks.py.old.py  test_connection.py  typesense_config.py  urls.py  utils.py  views.py
core/initial_data/: sites.csv
core/migrations/: 0001_initial.py  0002_customuser_customer_customuser_subscription.py  0002_newssource_last_crawled.py  0003_journalist_image_url_journalist_profile_url_and_more.py  0003_remove_newspage_slug.py  0004_journalist_description.py  0004_newspage_is_news_article.py  0005_newssource_country_newssource_language_and_more.py  0005_savedlist.py  0006_digitalprexample.py  0006_journalist_country.py  0007_customuser_has_created_list_and_more.py  0007_journalist_x_profile_url.py  0008_alter_journalist_sources_alter_newspage_journalists_and_more.py  0008_customuser_credits.py  0009_dbstat.py  0009_newspagecategory_newspage_categories.py  0010_customuser.py  0010_journalist_email_address.py  0011_customuser_has_access_to_journalists.py  0011_savedsearch.py  0012_customuser_brand_name.py  0012_customuser_searches_count.py  0013_alter_customuser_customer_and_more.py  0013_journalist_email_status.py  0014_remove_customuser_customer_and_more.py  0015_pricingplan_customuser_pricing_plan.py  0016_rename_product_id_pricingplan_polar_id.py  0017_pricingplan_description_pricingplan_is_archived_and_more.py  0018_pricingplan_checkout_url.py  0019_newspage_search_vector_and_more.py  0020_newspage_published_date.py  0021_alter_newspage_title.py  (+26 more)
nachopr/: asgi.py  settings.py  urls.py  wsgi.py
supervisor/: celery.conf  celerybeat.conf  celeryflower.conf  celeryworker.conf  crawler.conf  journalist_processor.conf  redis.conf  typesense.conf
(+59 files in other folders)
