[project]
name = "nacho_pr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.1.2",
    "django-allauth[socialaccount]",
    "django-crispy-forms",
    "django-extensions",
    "django-debug-toolbar",
    "spider_rs",
    "asyncio",
    "slugify",
    "granian",
    "whitenoise",
    "beautifulsoup4",
    "requests",
    "requests-cache",
    "django-tailwind",
    "openai",
    "python-dotenv",
    "django-browser-reload>=1.17.0",
    "pillow>=11.0.0",
    "django-crontab>=0.7.1",
    "psutil>=6.1.0",
    "readabilipy>=0.2.0",
    "dj-stripe>=2.8.4",
    "lunary==1.1.14",
]
