[project]
name = "nacho_pr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.1.2",
    "django-allauth[socialaccount]",
    "django-crispy-forms",
    "django-extensions",
    "django-debug-toolbar",
    "spider_rs",
    "asyncio",
    "slugify",
    "granian",
    "whitenoise",
    "beautifulsoup4",
    "requests",
    "requests-cache",
    "django-tailwind",
    "openai",
    "python-dotenv",
    "django-browser-reload>=1.17.0",
    "pillow>=11.0.0",
    "django-crontab>=0.7.1",
    "psutil>=6.1.0",
    "readabilipy>=0.2.0",
    "lunary==1.1.14",
    "markdownify>=0.13.1",
    "django-allauth-theme>=0.7.3",
    "crispy-tailwind>=1.0.3",
    "pymemcache>=4.0.0",
    "algoliasearch-django>=3.0,<4.0",
    "dj-database-url>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "mailscout>=0.1.1",
    "polar-sdk>=0.8.0",
    "dj-stripe>=2.8.4",
    "resend>=2.4.0",
    "pgvector>=0.3.6",
    "tiktoken>=0.8.0",
    "sentry-sdk[django]>=2.19.0",
]
